added github link

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -354,6 +354,31 @@
        End Portfolio
     =============================== -->
 
+    <!-- =============================
+      Github
+    =============================== -->
+<section class="services" id="service">
+ </section>
+
+  {{ if $data.homepage.call_to_action.enable }}
+  {{ with $data.homepage.call_to_action }}
+  <div class="need-service wow fadeInUp" data-wow-duration="1.5s"
+    style="background-image: url('{{ .bg_image | absURL }}');">
+    <h1>{{ .title | markdownify }}</h1>
+    {{ with .content }} <p class="text-white">{{ . | markdownify }}</p> {{ end }}
+    {{ if .button.enable }}
+    {{ with .button }}
+    <a href="{{ .link }}">{{ .label }}</a>
+    {{ end }}
+    {{ end }}
+  </div>
+  {{ end }}
+  {{ end }}
+</section>
+<!-- =============================
+       GitHub
+    =============================== -->
+
 <!-- =============================
        Start Testimonials
     =============================== -->
