--- a/layouts/index.html
+++ b/layouts/index.html
@@ -197,6 +197,12 @@
           <a href="{{ .link | absURL }}" class="download-cv hvr-icon-hang"> {{ .label }} &nbsp; &nbsp; &nbsp;</a>
           {{ end }}
           {{ end }}
+          {{ if .button.enable }}
+		            {{ with .button2 }}
+		            <a href="{{ .link | absURL }}" class="download-cv hvr-icon-hang"> {{ .label }} &nbsp; &nbsp; &nbsp;</a>
+		            {{ end }}
+          {{ end }}
+
         </div>
       </div>
       {{ with .image }}
@@ -352,6 +358,31 @@
 {{ end }}
 <!-- =============================
        End Portfolio
+    =============================== -->
+     <!-- =============================
+	      Github
+	    =============================== -->
+	<section class="services" id="service">
+
+
+	  {{ if $data.homepage.GitHub }}
+	  {{ with $data.homepage.GitHub }}
+	  <div class="need-service wow fadeInUp" data-wow-duration="1.5s"
+	    style="background-image: url('{{ .bg_image | absURL }}');">
+	    <h1>{{ .title | markdownify }}</h1>
+	    {{ with .content }} <p class="text-white">{{ . | markdownify }}</p> {{ end }}
+	    {{ if .button.enable }}
+	    {{ with .button }}
+	    <div style="color:white">   <i class="fa fa-github fa-3x" aria-hidden="true"></i></div>
+	    <a href="{{ .link }}">{{ .label }}</a>
+	    {{ end }}
+	    {{ end }}
+	  </div>
+	  {{ end }}
+	  {{ end }}
+	</section>
+	<!-- =============================
+	       GitHub
     =============================== -->
 
 <!-- =============================
