--- a/layouts/index.html
+++ b/layouts/index.html
@@ -363,7 +363,7 @@
 	      Github
 	    =============================== -->
 	<section class="services" id="service">
-
+	</section>
 
 	  {{ if $data.homepage.GitHub }}
 	  {{ with $data.homepage.GitHub }}
