--- a/layouts/index.html
+++ b/layouts/index.html
@@ -446,7 +446,7 @@
               <input class="form-control" type="text" name="username" id="username" placeholder="Name" required>
               <div class="help-block with-errors"></div>
             </div>
-            <div class="form-group col-lg-6">
+            <div class="form-group col-lg-6" align="center">
               <input class="form-control" type="email" id="email" name="email" placeholder="Email" required>
               <div class="help-block with-errors"></div>
             </div>
